While testing found some minor display issues on small device screen sizes when in landscape orientation. Added media queries to target display issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ a:hover {
 
 /* Navigation */
 nav {
+    height: 90px;
     width: 100%;
     display: flex;
     position: fixed;
@@ -98,12 +99,17 @@ nav > ul {
     border-bottom: 1px solid #dbeeff;
 }
 
+.nav-bar-spacer {
+    height: 80px;
+    visibility: hidden;
+}
+
 /* Hero */
 
 .hero {
     display: grid;
     grid-template: repeat(3, 1fr) / 12rem 1fr;
-    height: 100dvh;
+    height: 100svh;
     background-position: left;
     background-size: cover;
     align-items: end;
@@ -120,6 +126,12 @@ nav > ul {
     background-position: center;
 }
 
+.join-us-lg-image {
+    /* Photo by Axel Brunst on unsplash.com */
+    background-image: url(../images/signup.webp);
+    background-position: right;
+}
+
 .hero > h2 {
     grid-area: 3/1/4/2;
     font-size: 12rem;
@@ -131,14 +143,15 @@ nav > ul {
     line-height: 0.9;
 }
 
-.hero > h5 {
+.hero > p {
     grid-area: 3/2/4/3;
     color: rgb(219, 238, 255);
     font-size: 1.25rem;
+    font-weight: bolder;
 }
 
 .hero > h2,
-.hero > h5 {
+.hero > p {
     padding-bottom: 1.5rem;
 }
 
@@ -308,22 +321,15 @@ nav > ul {
 
 
 /* Join Us */
-.form-background-container {
-    height: 100svh;
-    width: 100%;
-    background-image: url(../images/signup.webp);
-    background-size: cover;
-    background-position: right;
-}
-
 .form-container {
-    position: relative;
-    height: 100%;
+    height: 100svh;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    top: 60px;
+    background-image: url(../images/signup.webp);
+    background-position: right;
+    background-size: cover;
 }
 
 .join-us-form {
@@ -335,6 +341,7 @@ nav > ul {
     backdrop-filter: blur(2px);
     border: 1px solid #3c3e42;
     border-radius: 2rem;
+    margin: 100px 0 10px;
 }
 
 .form-logo { 
@@ -437,6 +444,25 @@ footer > a {
 @media screen and (max-width:425px) {
     .location-card-wrapper {
         margin: 2rem 0;
+    }
+}
+
+@media screen and (max-height:425px) {
+    .hero {
+        grid-template: repeat(3, 1fr) / 8rem 1fr;
+    }
+    .hero > h2 {
+        font-size: 8rem;
+    }
+    .hero > h2,
+    .hero > p {
+        padding: 0.15rem;
+    }
+}
+
+@media screen and (max-height:661px) {
+    .form-container {
+        height: 661px;
     }
 }
 
